fixed the bugs, update when user is unverified and included node-cron
