# src/routes/authroutes.ts
@@ -1,7 +1,8 @@
 import express from "express";
-import { forgotPassword, login, register, resetPassword, verifyEmail, logout } from "../controllers/auth";
+import { forgotPassword, resendVerification, login, register, resetPassword, verifyEmail, logout } from "../controllers/auth";
 import { asyncHandler } from "../utils/asyncHandler";
 import { validate } from "../middlewares/validate";
+import { ipLimiter, emailThrottle } from "../middlewares/rateLimit";
 import {
   registerSchema,
   verifyEmailSchema,
@@ -15,6 +16,7 @@ const AuthRoutes = express.Router();
 
 AuthRoutes.post("/register", validate(registerSchema), asyncHandler(register));
 AuthRoutes.post("/verifyemail", validate(verifyEmailSchema), asyncHandler(verifyEmail));
+AuthRoutes.post("/resend", asyncHandler(resendVerification));
 AuthRoutes.post("/login", validate(loginSchema), asyncHandler(login));
 AuthRoutes.post("/forgetpassword", validate(forgetPasswordSchema), asyncHandler(forgotPassword));
 AuthRoutes.post("/resetpassword", validate(resetPasswordSchema), asyncHandler(resetPassword));
